--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
-     
-
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-        "predeploy": "npm run build",
-       "deploy": "gh-pages -d build"
-    
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -48,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.1.1",
+    "react-router-dom": "^6.23.1"
   }
 }
