--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap": "^2.10.2",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
     "web-vitals": "^2.1.4"
