--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
